--- a/test2.css
+++ b/test2.css
@@ -137,6 +137,10 @@ div#tlogins div#l2 ,div#l3 {
     background-repeat: no-repeat;
     background-position: right;
     height: 64px;
+    background-image: -webkit-linear-gradient(
+45deg
+,#c0a47c 25%,#c0a47c 25%,#c0a47c 50%,#c0a47c 50%,#c0a47c 75%,#c0a47c 75%,#c0a47c)!important;
+    background: #ebebeb;
 }
 div#tlogins div#l1 br {
     display: none;
