--- a/test10.css
+++ b/test10.css
@@ -306,3 +306,82 @@ font-family: 'jazeera',FontAwesome;
 div#l1 {
   padding:16.8px !important;
 }
+.fl.mini.fa.fa-bullhorn.btn.btnn-default {
+    font-size: 14px!important;
+    width: 100%;
+    background-color: #8a6d3b!important;
+    color: #fff;
+    text-align: center;
+    border-radius: 10%;
+    margin-bottom: 3px;
+    margin-top: 1px;
+    height: 25px;
+    padding: 5px 0;
+    margin-left: 1px;
+}
+input[type=jfa-w] {
+    font-size: 15px!important;
+    width: 100%;
+    text-align: center;
+    color: #885867;
+    border-radius: 14%;
+    margin-bottom: 6px;
+    margin-top: 1px;
+    margin-left: 3px;
+}
+a.label.label-primary.fr {
+    height: 100%;
+    width: 100%;
+    background-color: #1391a7!important;
+    border: 1px solid rgb(189 154 154/0%);
+}
+img.fitimg.fl.borderg.spic.corner.hand {
+    width: 50px!important;
+    height: 50px!important;
+    margin: -78px!important;
+    margin-top: -65px!important;
+    margin-bottom: -42px!important;
+    margin-left: 97px!important;
+    border-radius: 25px 25px 25px 25px!important;
+    border: 1px solid #c3c3c3!important;
+}
+label.label.tc.border.btn.label-info.fl {
+    margin: 4px!important;
+    margin-top: -260px!important;
+    margin-right: 15px!important;
+    margin-bottom: -64px!important;
+    margin-left: 3px!important;
+    background-color: #8a6d3b!important;
+    background: linear-gradient( 
+369deg
+,#ffffff 0%,#ffffff 100%)!important;
+    border-left: 3px #8a6d3b solid!important;
+    border-right: 3px #8a6d3b solid!important;
+    border-radius: 7px;
+}
+input.stopic.corner.dots, input.smsg.corner.dots {
+    padding: 2px;
+    border-right: 5px groove rgb(126 130 129);
+    border-left: 5px groove rgb(208 214 213);
+    border-top-color: rgb(202 198 198);
+    border-bottom-color: rgb(126 130 129);
+    min-height: 28px!important;
+    text-align: center;
+    border-style: inset;
+    width: 99%!important;
+    border-radius: 10px!important;
+}
+.tbox {
+    padding: 3px;
+    min-height: 28px!important;
+    border-right: 5px solid;
+    border-left: 5px solid;
+    border-color: #d2d2d2;
+    border-left-style: groove;
+    border-right-style: ridge;
+    border-radius: 3px!important;
+}
+.ae, button.btn {
+    border-radius: 3px;
+    border: #e8e8e8 solid 1px;
+}
