--- a/test18.css
+++ b/test18.css
@@ -597,7 +597,37 @@ img.fl.fitimg.hand.u-pic {
 }
 .fa-star:before {
     content: "\2605";
-    position: absolute;
-    left: 0;
     overflow: hidden;
+}
+a.btn.minix.btn-primary.fa.fa-comment.fr {
+    color: #02e1ff !important;
+    padding: 4px 74px 7px 49px !important;
+    border-radius: 2px 0px 0px 3px;
+    border: 1px solid rgb(255 244 244 / 70%);
+    background-repeat: no-repeat;
+    background-color: #ffffff00 !important;
+    margin-top: 0px !important;
+    width: 50%;
+    margin-left: 0px !important;
+    background-image: url(https://b.top4top.io/p_1918540se1.png);
+    background-size: 32px 979px;
+    background-position-x: 56%;
+    background-position-y: 60%;
+    background-position: 50% -353px;
+}
+a.btn.minix.btn-primary.fa.fa-heart.fr {
+    border-radius: 2px 0px 0px 3px;
+    border: 1px solid rgb(255 244 244 / 70%);
+    background-repeat: no-repeat;
+    background-color: #ffffff00 !important;
+    color: #ff006d;
+    margin-top: 0px !important;
+    width: 50%;
+    margin-left: 0px !important;
+    background-image: url(https://b.top4top.io/p_1918540se1.png);
+    background-size: 32px 979px;
+    padding: 4px 74px 7px 49px !important;
+    background-position-x: 56%;
+    background-position-y: 60%;
+    background-position: 49% -324px;
 }
