--- a/test21.css
+++ b/test21.css
@@ -537,16 +537,6 @@ a.btn.minix.fa.fa-times.fr, a.btn.minix.fa.fa-thumbs-up.fr, a.btn.minix.fa.fa-co
     border-bottom: 1px solid #a6a6a6;
     border-radius: 3px;
 }
-
-a.btn.minix.fa.fa-comment.fr {
-    color: #fff!important;
-    border-radius: 4px;
-    padding: 1px 4px 2px 5px;
-    margin-top: 6px;
-    background-repeat: repeat-x;
-    border-color: #c0a47c;
-    background-image: linear-gradient(to bottom,#c0a47c 0,#c0a47c 100%);
-}
 button.border.btn.label.label-success.fl.fa.fa-plus {
     color: #ffffff !important;
     font-family: jazeera, FontAwesome;
@@ -598,3 +588,37 @@ img.fl.fitimg.hand.u-pic {
 .fa-star:before {
     content: "\2605";
     overflow: hidden;
+	}
+a.btn.minix.btn-primary.fa.fa-comment.fr {
+    color: #02e1ff !important;
+    padding: 4px 74px 7px 49px !important;
+    border-radius: 2px 0px 0px 3px;
+    border: 1px solid rgb(255 244 244 / 70%);
+    background-repeat: no-repeat;
+    background-color: #ffffff00 !important;
+    margin-top: 0px !important;
+    width: 50%;
+    margin-left: 0px !important;
+    background-image: url();
+    background-size: 32px 979px;
+    background-position-x: 56%;
+    background-position-y: 60%;
+    background-position: 50% -353px;
+}
+a.btn.minix.btn-primary.fa.fa-heart.fr {
+    border-radius: 2px 0px 0px 3px;
+    border: 1px solid rgb(255 244 244 / 70%);
+    background-repeat: no-repeat;
+    background-color: #ffffff00 !important;
+    color: #ff006d;
+    margin-top: 0px !important;
+    width: 50%;
+    margin-left: 0px !important;
+    background-image: url();
+    background-size: 32px 979px;
+    padding: 4px 74px 7px 49px !important;
+    background-position-x: 56%;
+    background-position-y: 60%;
+    background-position: 49% -324px;
+}
+
