Update and rename maiq4.css to maiq5.css

--- a/maiq5.css
+++ b/maiq5.css
@@ -295,4 +295,39 @@ div#tlogins div#l2 .checkbox label {
 img.fr.co {
     display: none;
 }
+div#asim13 {
+  width:100%;
+  top:183px;
+  position:absolute;
+  height:26px;
+  padding:1px 0 0;
+font-family: 'jazeera',FontAwesome;
+}
+
+div#l1 {
+  padding:16.8px !important;
+}
+.fl.mini.fa.fa-bullhorn.btn.btnn-default {
+    font-size: 14px!important;
+    width: 100%;
+    background-color: #8a6d3b!important;
+    color: #fff;
+    text-align: center;
+    border-radius: 10%;
+    margin-bottom: 3px;
+    margin-top: 1px;
+    height: 25px;
+    padding: 5px 0;
+    margin-left: 1px;
+}
+input[type=jfa-w] {
+    font-size: 15px!important;
+    width: 100%;
+    text-align: center;
+    color: #885867;
+    border-radius: 14%;
+    margin-bottom: 6px;
+    margin-top: 1px;
+    margin-left: 3px;
+}
 
