Update and rename maiq8.css to maiq9.css

--- a/maiq9.css
+++ b/maiq9.css
@@ -421,14 +421,14 @@ button.border.btn.label.label-success.fl.fa.fa-plus {
     content: " انشاء غرفة";
     text-align: center!important;
 }
-a.btn.minix.fa.fa-times.fr, a.btn.minix.fa.fa-thumbs-up.fr, a.btn.minix.fa.fa-comment.fr {
+a.btn.minix.btn-primary.fa.fa-heart.fr {
     border-left: 1px solid #d3d3d3;
     border-top: 1px solid #d3d3d3;
     border-right: 1px solid #a6a6a6;
     border-bottom: 1px solid #a6a6a6;
     border-radius: 3px;
 }
-a.btn.minix.fa.fa-thumbs-up.fr {
+a.btn.minix.btn-primary.fa.fa-heart.fr {
     color: #fff!important;
     border-radius: 4px;
     padding: 1px 4px 2px 5px;
@@ -445,7 +445,7 @@ a.btn.minix.fa.fa-times.fr, a.btn.minix.fa.fa-thumbs-up.fr, a.btn.minix.fa.fa-co
     border-bottom: 1px solid #a6a6a6;
     border-radius: 3px;
 }
-a.btn.minix.fa.fa-comment.fr {
+a.btn.minix.btn-primary.fa.fa-comment.fr {
     color: #fff!important;
     border-radius: 4px;
     padding: 1px 4px 2px 5px;
