--- a/maiq12.css
+++ b/maiq12.css
@@ -304,28 +304,78 @@ div#asim13 {
 font-family: 'jazeera',FontAwesome;
 }
 
+
 label.label.tc.border.btn.label-info.fl {
-    margin: 4px !important;
-    margin-top: -260px !important;
-    margin-right: 15px !important;
-    margin-bottom: -64px !important;
-    margin-left: 3px !important;
-    background-color: #8a6d3b !important;
-    background: linear-gradient( 
-369deg
-,#ffffff 0%,#ffffff 100%) !important;
-    border-left: 3px #8a6d3b solid !important;
-    border-right: 3px #8a6d3b solid !important;
-    border-radius: 7px;
+  margin:4px !important;
+  margin-top:-260px !important;
+  margin-right:15px !important;
+  margin-bottom:-64px !important;
+  margin-left:3px !important;
+  background-color:#1391a7 !important;
+  background:linear-gradient( 369deg,#ffffff 0%,#ffffff 100%) !important;
+  border-left:3px #2b8799 solid !important;
+  border-right:3px #2b8799 solid !important;
+  border-radius:7px;
+}
+
+label.label.tc.border.pmsg.btn.label-info.fl {
+  margin:4px !important;
+  margin-top:0 !important;
+  margin-right:0 !important;
+  margin-bottom:0 !important;
+  margin-left:3px !important;
+  background-color:#1391a7 !important;
+  background:linear-gradient( 369deg,#f8f8ff 0%,#f8f8ff 100%) !important;
+  border:1px solid #e8e8e8 !important;
+  color:#000 !important;
+  border-radius:0%;
 }
 
 img.fitimg.fl.borderg.spic.corner.hand {
-    width: 50px !important;
-    height: 50px !important;
-    margin: -78px !important;
-    margin-top: -65px !important;
-    margin-bottom: -42px !important;
-    margin-left: 97px !important;
-    border-radius: 25px 25px 25px 25px !important;
-    border: 1px solid #c3c3c3 !important;
+  width:50px !important;
+  height:50px !important;
+  margin:-78px !important;
+  margin-top:-65px !important;
+  margin-bottom:-42px !important;
+  margin-left:97px !important;
+  border-radius:25px 25px 25px 25px !important;
+  border:1px solid #c3c3c3 !important;
 }
+
+div.borderg.corner {
+  margin-top:140px !important;
+}
+
+.fl.borderg.corner.uzr {
+  margin-top:1px !important;
+}
+
+input.stopic.corner.dots,
+input.smsg.corner.dots {
+  padding:2px;
+  border-right:5px groove rgb(126 130 129);
+  border-left:5px groove rgb(208 214 213);
+  border-top-color:rgb(202 198 198);
+  border-bottom-color:rgb(126 130 129);
+  min-height:28px !important;
+  text-align:center;
+  border-style:inset;
+  width:99% !important;
+  border-radius:10px !important;
+}
+
+label.label.tc.border.redit.btn.label-info.fl {
+  margin:4px !important;
+  margin-top:3px !important;
+  margin-right:0 !important;
+  margin-bottom:0 !important;
+  margin-left:3px !important;
+  background-color:#f8f8ff !important;
+  background:linear-gradient( 369deg,#f8f8ff 0%,#ffffff 100%) !important;
+  border-color:#e8e8e8 !important;
+  color:#000 !important;
+  border-radius:0;
+  border-left:1px #e8e8e8 solid !important;
+  border-right:1px #e8e8e8 solid !important;
+}
+
