--- a/maiq15.css
+++ b/maiq15.css
@@ -500,3 +500,24 @@ span.border {
 h3.popover-title, .fa-cog:before, .fa-commenting-o:before, .fa-group:before, .fa-users:before, span.border, .fl.fa.fa-comment.btn.ui-corner-all.ui-shadow.ui-btn.ui-btn-inline.upm.borderg.fa-comment:before, .fa-envelope-o:before, .fa-diamond:before, .fa-search:before, .fa-ban:before, .fa-ban:before, .fa-user-times:before {
     display: none;
 }
+.border {
+    /* border-color: #000 !important; */
+}
+
+.border {
+    /* border: 1px solid black; */
+}
+.uzr.fl.corner.borderg.hmsg.mm {
+    background-color: #8a6d3b61 !important;
+}
+
+.uzr.fl.corner.borderg.mm {
+    border-left: 2px solid #8a6d3b ;
+    margin-left: 0!important;
+    border-radius: 0!important;
+    width: 100%!important;
+    border-top: .7px solid #eee!important;
+    border-bottom: .7px solid #eee!important;
+    margin-bottom: 0!important;
+    line-height: 26px;
+}
