Update and rename maiq16.css to maiq17.css

--- a/maiq17.css
+++ b/maiq17.css
@@ -528,3 +528,30 @@ h3.popover-title, .fa-cog:before, .fa-commenting-o:before, .fa-group:before, .fa
 }
 
 
+a.btn.minix.fa.fa-times.fr, a.btn.minix.fa.fa-thumbs-up.fr, a.btn.minix.fa.fa-comment.fr {
+    border-left: 1px solid #d3d3d3;
+    border-top: 1px solid #d3d3d3;
+    border-right: 1px solid #a6a6a6;
+    border-bottom: 1px solid #a6a6a6;
+    border-radius: 3px;
+}
+
+div#d2bc > div > a.btn.minix.btn-primary.fa.fa-times.fa {
+    color: #fff!important;
+    border-radius: 4px;
+    padding: 1px 4px 2px 5px;
+    margin-top: 6px;
+    background-repeat: repeat-x;
+    border-color: #fff!important;
+    background-image: linear-gradient(to bottom,#f8f9fa 0,#dee2e6 100%)!important;
+    margin-left: 1px;
+    width: 13px;
+    margin-right: 2px;
+}
+.fa-remove:before, .fa-close:before, .fa-times:before {
+    color: #f0f2f400;
+}
+
+.fa-remove:before, .fa-close:before, .fa-times:before {
+    content: "\f00d";
+}
